--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,67 @@
-# 工作流名称，可自定义
+# 工作流名称
 name: Flutter Build APK
 
-# 触发条件：push 到 main 分支、手动触发（workflow_dispatch）
+# 触发条件：push到main分支、PR到main分支、手动触发
 on:
   push:
     branches: [ main ]
-  workflow_dispatch: # 手动触发开关
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch: # 手动触发（在GitHub Actions页面可点击运行）
 
-# 任务配置
+# 任务定义
 jobs:
-  build:
-    # 运行环境：Ubuntu 最新版
+  build-apk:
+    # 运行环境：Ubuntu最新版
     runs-on: ubuntu-latest
 
     steps:
-      # 步骤1：拉取仓库代码到 GitHub 服务器
+      # 步骤1：检出仓库代码
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 步骤2：安装 Flutter SDK（自动适配最新稳定版）
+      # 步骤2：配置Java环境（Android构建需要Java 17）
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle # 缓存Gradle依赖，加速构建
+
+      # 步骤3：配置Flutter环境
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable' # 指定用稳定版
-          channel: 'stable'
+          # 指定Flutter版本（stable=稳定版，也可填具体版本如3.16.0）
+          flutter-version: 'stable'
+          # 缓存Flutter依赖，加速后续构建
+          cache: true
 
-      # 步骤3：更新 Flutter 依赖（flutter pub get）
-      - name: Install dependencies
+      # 步骤4：获取Flutter项目依赖
+      - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 步骤4：清理缓存（避免构建冲突）
-      - name: Clean project
-        run: flutter clean
+      # 步骤5：（可选）运行代码分析（按需开启）
+      # - name: Analyze code
+      #   run: flutter analyze
 
-      # 步骤5：构建 APK（debug 版，无需签名；如需 release 版见下方说明）
-      - name: Build APK
-        run: flutter build apk --debug --split-per-abi
+      # 步骤6：（可选）运行单元测试（按需开启）
+      # - name: Run tests
+      #   run: flutter test
 
-      # 步骤6：上传生成的 APK 作为构建产物（方便下载）
+      # 步骤7：构建Release版APK
+      - name: Build Release APK
+        run: flutter build apk --release --split-per-abi
+        # 说明：
+        # --release：构建正式版（需签名配置才能安装到真机）
+        # --split-per-abi：按CPU架构拆分APK（减小体积），若不需要可移除
+
+      # 步骤8：上传APK作为构建产物（方便下载）
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: flutter-apk # 产物名称，可自定义
-          path: build/app/outputs/flutter-apk/ # APK 生成路径（固定）
+          name: flutter-apk
+          # APK输出路径（拆分架构则是多个APK，未拆分则是app-release.apk）
+          path: |
+            build/app/outputs/flutter-apk/app-*-release.apk
+            build/app/outputs/flutter-apk/app-release.apk
